monticore-generator/src/test/resources/cocos/invalid/A4028/A4028.mc4
package cocos.invalid.A4028;

grammar A4028 {

  A;

  B;

  E = a:A;

  ast E = a:B;


}
